# crypto-price-aggregator

./: .env.example  .gitignore  Cargo.toml  README.md  output.json
src/: lib.rs
