[package]
name = "oracle-takehome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.21.0", features = ["native-tls"]}
url = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
eyre = "0.6.11"
clap = { version = "4.4.18", features = ["derive"] }
k256 = "0.13.3"
hex = "0.4.3"
dotenv = "0.15.0"
